--- a/app/package.json
+++ b/app/package.json
@@ -9,8 +9,8 @@
     "pluginsData": {
         "kinvey-nativescript-sdk": {
             "config": {
-                "appKey": "kid_B1p2_VFL7",
-                "appSecret": "50d0f35b18be45d0bee7371fb271a4e1"
+                "appKey": "kid_BJxk_VYIm",
+                "appSecret": "6ffdf340e01a4851bf187081aae5fdc6"
             }
         }
     }
