--- a/app/core/routes-config.json
+++ b/app/core/routes-config.json
@@ -31,6 +31,11 @@
             "path": "master",
             "title": "Master detail",
             "loadChildren": "./master-details/customers.module#CustomersModule"
+        },
+        {
+            "path": "login",
+            "loadChildren": "./login/login.module#LoginModule",
+            "title": "login"
         }
     ]
 }
