--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "nativescript-geolocation": "4.3.0",
     "nativescript-intl": "3.0.0",
     "nativescript-iqkeyboardmanager": "1.3.0",
-    "nativescript-mapbox": "^4.2.0",
+    "nativescript-mapbox": "~4.1.0",
     "nativescript-social-share": "1.5.0",
     "nativescript-theme-core": "1.0.4",
     "nativescript-ui-autocomplete": "3.8.0",
