--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "nativescript-angular": "6.1.0",
     "nativescript-background-http": "3.3.0",
     "nativescript-camera": "4.0.2",
+    "nativescript-dev-webpack": "^0.15.1",
     "nativescript-fresco": "4.0.0",
     "nativescript-geolocation": "4.3.0",
     "nativescript-intl": "3.0.0",
@@ -55,6 +56,8 @@
     "nativescript-dev-sass": "1.6.0",
     "nativescript-dev-typescript": "0.7.2",
     "tns-platform-declarations": "4.2.0",
-    "typescript": "~2.7.2"
+    "typescript": "~2.7.2",
+    "@angular/compiler-cli": "~6.1.0",
+    "@ngtools/webpack": "~6.1.0"
   }
 }
