--- a/package.json
+++ b/package.json
@@ -35,13 +35,13 @@
     "nativescript-mapbox": "~4.1.0",
     "nativescript-social-share": "1.5.0",
     "nativescript-theme-core": "1.0.4",
-    "nativescript-ui-autocomplete": "3.8.0",
-    "nativescript-ui-calendar": "3.7.0",
-    "nativescript-ui-chart": "3.7.0",
-    "nativescript-ui-dataform": "3.6.2",
-    "nativescript-ui-gauge": "3.6.0",
-    "nativescript-ui-listview": "3.5.11",
-    "nativescript-ui-sidedrawer": "4.2.1",
+    "nativescript-ui-autocomplete": "*",
+    "nativescript-ui-calendar": "*",
+    "nativescript-ui-chart": "*",
+    "nativescript-ui-dataform": "*",
+    "nativescript-ui-gauge": "*",
+    "nativescript-ui-listview": "*",
+    "nativescript-ui-sidedrawer": "*",
     "nativescript-vue": "1.3.1",
     "reflect-metadata": "0.1.12",
     "rxjs": "6.2.2",
